--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "test": "grunt test"
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-jshint": "~0.7.1",
+    "grunt-mocha-cli": "~1.3.0",
+    "chai": "~1.8.1",
+    "supertest": "~0.8.1"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/jeremyworboys/Incident-Theatres.git"
