--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node index",
     "test": "grunt test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "~3.4.4"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.7.1",
