--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "orm": "~2.1.3",
+    "mysql": "~2.0.0-alpha9"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
