--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-mocha-cli": "~1.3.0",
     "chai": "~1.8.1",
-    "supertest": "~0.8.1"
+    "supertest": "~0.8.1",
+    "migrate": "~0.1.3",
+    "grunt-exec": "~0.4.2"
   },
   "repository": {
     "type": "git",
