--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "mysql": "~2.0.0-alpha9"
   },
   "devDependencies": {
+    "chai": "~1.8.1",
     "grunt": "~0.4.1",
     "grunt-contrib-jshint": "~0.7.1",
+    "grunt-exec": "~0.4.2",
     "grunt-mocha-cli": "~1.3.0",
-    "chai": "~1.8.1",
-    "supertest": "~0.8.1",
     "migrate": "~0.1.3",
-    "grunt-exec": "~0.4.2"
+    "sinon": "~1.7.3",
+    "sinon-chai": "~2.4.0",
+    "supertest": "~0.8.1"
   },
   "repository": {
     "type": "git",
