--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "express": "~3.4.4",
     "orm": "~2.1.3",
-    "mysql": "~2.0.0-alpha9"
+    "mysql": "~2.0.0-alpha9",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "chai": "~1.8.1",
